# deltascope-desktop

./: .gitignore  LICENSE  README.md  TODO.MD  next.config.js  package.json  pnpm-lock.yaml
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
src-tauri/src/db/: _old_db.rs  app.rs  conn.rs  delta.rs  events.rs  file_db.rs  files.rs  mod.rs  tables.rs
src-tauri/src/methods/: delta.rs
src-tauri/src/tools/: files.rs  fls.rs  mactime.rs  mod.rs  rsfls.rs
src/components/actions/: Actions.tsx
src/components/actions/events/: EventsAction.tsx
src/components/actions/files/: FileAction.tsx  FilesAction.tsx
src/components/header/: OutputDirectory.tsx  Routes.tsx  SelectedImages.tsx
src/components/images/: Cases.tsx  ImageActions.tsx  selectedFile.tsx
src/components/timeline/: Timeline.tsx
src/pages/: _app.tsx  files.tsx  index.tsx  timeline.tsx
src/styles/: globals.css
