[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = ["api-all"] }
# diesel = { version = "2.0.0", features = ["sqlite"] }
dotenvy = "0.15"

sqlx = { version = "0.6", features = [ "runtime-tokio-rustls" , "sqlite" ] }
uuid = "1.3.0"
chrono = "0.4.24"
bodyfile = "0.1.4"
tokio = { version = "1.27.0", features = ["full"] }
# rayon = "1.7"
# threadpool = "1.8.1"
# sqlite = "0.30.4"
# simple_logger = "4.1.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
